# UnitreeRATP

./: .gitignore  .gitmodules  Diagramme.gan  LICENSE  ListeProjet.xlsx  README.md  camera_calibration.yml  run_all.sh
docs/diagrammes/: Diagramme Synoptique.drawio  Diagramme SynoptiqueV2.drawio
src/aruco/: CMakeLists.txt  basicControl.py  main.cpp
src/aruco/calibration/: camera_calibration.yml
src/aruco/calibration/camera_calibration/: CMakeLists.txt  main.cpp
src/ihm/MyApplication/: local.properties
src/ihm/MyApplication/app/src/main/: AndroidManifest.xml
src/ihm/MyApplication/app/src/main/java/com/example/myapplication/: BlankFragment.kt  Fragement1.kt  Fragement2.kt  MainActivity.kt  home.kt
src/ihm/MyApplication/app/src/main/res/layout/: activity_main.xml  fragment_blank.xml  fragment_fragement1.xml  fragment_fragement2.xml  fragment_home.xml
src/ihm/MyApplication/app/src/main/res/menu/: menu.xml
src/ihm/MyApplication/app/src/main/res/values/: strings.xml
src/ihm/MyApplication/gradle/wrapper/: gradle-wrapper.properties
src/lidar/: CMakeLists.txt  main.cpp
src/lidar/rplidar_sdk/output/Linux/Release/: custom_baudrate  simple_grabber
src/movement/: CMakeLists.txt  basicControl.py  main.cpp
src/movement/libs/Movement/abstract/: IMovement.cpp  IMovement.hpp
src/movement/libs/Movement/implementations/Unitree/abstract/: IUnitreeMovement.cpp  IUnitreeMovement.hpp
src/movement/libs/Movement/implementations/Unitree/dogs/Unitree Go 1/: UnitreeGo1.cpp  UnitreeGo1.hpp
src/movement/libs/Movement/implementations/Unitree/dogs/Unitree Go 1/utilities/MQTT/: Topics.hpp
src/movement/libs/Movement/implementations/Unitree/utilities/enums/: UnitreeProtocols.hpp
src/mqtt/: CMakeLists.txt  basicControl.py  main.cpp
